updated nav menu in index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <header>
       <div>
         <nav class="nav-container">
-          <a href="#">Logo</a>
-          <menu>
-            <ul>
-              <li>Section A</li>
-              <li>Section B</li>
-              <li>Section C</li>
-            </ul>
+          <a href="#" class="logo">Logo</a>
+          <menu class="nav-menu">
+            <a href="#">Section A</a>
+            <a href="#">Section B</a>
+            <a href="#">Section C</a>
           </menu>
         </nav>
       </div>
