--- a/index.html
+++ b/index.html
@@ -3,23 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Landing Page</title>
+    <title>Website Mockup</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
-        <nav class="nav-container">
-          <a href="#" class="logo">Logo</a>
-          <menu class="nav-menu">
-            <a href="#">Section A</a>
-            <a href="#">Section B</a>
-            <a href="#">Section C</a>
-          </menu>
-        </nav>
-      </div>
+    <header class="header">
+      <div class="header-logo">Header Logo</div>
+      <nav class="header-links">
+        <a href="#">header link one</a>
+        <a href="#">header link two</a>
+        <a href="#">header link three</a>
+      </nav>
     </header>
-    <main></main>
-    <footer><p>Copyright &copy; The Odin Project 2024</p></footer>
+
+    <main>
+      <section class="hero">
+        <div class="hero-content">
+          <h1 class="hero-title">This website is awesome</h1>
+          <p class="hero-subtext">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button class="btn-signup">Sign up</button>
+        </div>
+        <div class="hero-image">
+          <div class="image-placeholder">
+            this is a placeholder for an image
+          </div>
+        </div>
+      </section>
+
+      <section class="information">
+        <h2>Some random information.</h2>
+        <div class="info-cards">
+          <div class="card">
+            <div class="card-placeholder"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-placeholder"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-placeholder"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+          <div class="card">
+            <div class="card-placeholder"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="quote">
+        <blockquote>
+          <p>
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+          </p>
+          <cite>- Thor, God of Thunder</cite>
+        </blockquote>
+      </section>
+
+      <section class="call-to-action">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button class="btn-signup">Sign up</button>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p>Copyright © The Odin Project 2024</p>
+    </footer>
   </body>
 </html>
