--- a/index.html
+++ b/index.html
@@ -3,78 +3,93 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Mockup</title>
+    <title>Awesome Website</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="header-logo">Header Logo</div>
       <nav class="header-links">
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
+        <a href="#">Link One</a>
+        <a href="#">Link Two</a>
+        <a href="#">Link Three</a>
       </nav>
     </header>
 
-    <main>
-      <section class="hero">
-        <div class="hero-content">
-          <h1 class="hero-title">This website is awesome</h1>
-          <p class="hero-subtext">
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
-          </p>
-          <button class="btn-signup">Sign up</button>
-        </div>
-        <div class="hero-image">
-          <div class="image-placeholder">
-            this is a placeholder for an image
-          </div>
-        </div>
-      </section>
-
-      <section class="information">
-        <h2>Some random information.</h2>
-        <div class="info-cards">
-          <div class="card">
-            <div class="card-placeholder"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-          <div class="card">
-            <div class="card-placeholder"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-          <div class="card">
-            <div class="card-placeholder"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-          <div class="card">
-            <div class="card-placeholder"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </div>
-        </div>
-      </section>
-
-      <section class="quote">
-        <blockquote>
-          <p>
-            This is an inspiring quote, or a testimonial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.
-          </p>
-          <cite>- Thor, God of Thunder</cite>
-        </blockquote>
-      </section>
-
-      <section class="call-to-action">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast.
+        </p>
         <button class="btn-signup">Sign up</button>
-      </section>
-    </main>
+      </div>
+      <div class="hero-image">
+        <img
+          src="src/img/photo-1718584560193-4516c328604a.avif"
+          alt="Superhero Image"
+        />
+      </div>
+    </section>
 
+    <!-- Information Section -->
+    <section class="info-section">
+      <h2>Some random information</h2>
+      <div class="info-cards">
+        <div class="info-card">
+          <img
+            src="src/img/photo-1456324463128-7ff6903988d8.avif"
+            alt="Coffee Image 1"
+          />
+          <p>Some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <img
+            src="src/img/photo-1461023058943-07fcbe16d735.avif"
+            alt="Coffee Image 2"
+          />
+          <p>Some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <img
+            src="src/img/photo-1446321423766-c339f030bd0a.avif"
+            alt="Coffee Image 3"
+          />
+          <p>Some subtext under an illustration or image</p>
+        </div>
+        <div class="info-card">
+          <img
+            src="src/img/premium_photo-1674327105074-46dd8319164b.avif"
+            alt="Coffee Image 4"
+          />
+          <p>Some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Quote Section -->
+    <section class="quote-section">
+      <p>"The journey of a thousand miles begins with a single step."</p>
+      <span>- Lao Tzu</span>
+    </section>
+
+    <!-- Call to Action Section -->
+    <section class="call-to-action">
+      <h2>Call to action! It's time!</h2>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button>Sign up</button>
+    </section>
+
+    <!-- Footer -->
     <footer class="footer">
-      <p>Copyright © The Odin Project 2024</p>
+      <p>&copy; 2024 The Odin Project</p>
     </footer>
   </body>
 </html>
